// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Load should config of type common-js 1`] = `
Object {
  "mode": "common-js",
}
`;

exports[`Load should config of type es6 1`] = `
Object {
  "default": Object {
    "mode": "es6",
  },
}
`;

exports[`Load should config of type flow 1`] = `
Object {
  "mode": "flow",
}
`;

exports[`Load should config of type typescript 1`] = `
Object {
  "default": Object {
    "mode": "typescript",
  },
}
`;
